--- a/src/main/webapp-src/src/client/index.html
+++ b/src/main/webapp-src/src/client/index.html
@@ -30,243 +30,10 @@
     <link rel="icon" href="images/favicon.ico" th:href="@{/images/favicon.ico}" type="image/x-icon">
 </head>
 
-<body>
-    <header id="header">
-        <div id="logo-group">
-            <span id="logo"> 
-                    <img src="images/logo.png" alt="SmartAdmin"> 
-                </span>
-        </div>
-        <div class="pull-right">
-            <div id="hide-menu" class="btn-header pull-right">
-                <span> 
-                    <a href="javascript:void(0);" data-action="toggleMenu" title="Collapse Menu">
-                        <i class="fa fa-reorder"></i>
-                    </a> 
-                </span>
-            </div>
-            <div id="logout" class="btn-header transparent pull-right">
-                <span> <a href="login.html" title="Sign Out" data-action="userLogout" data-logout-msg="You can improve your security further after logging out by closing this opened browser"><i class="fa fa-sign-out"></i></a> </span>
-            </div>
-        </div>
-    </header>
-    <aside id="left-panel">
-        <div class="login-info">
-            <span> 
-                <a href="javascript:void(0);" id="show-shortcut" data-action="toggleShortcut">
-                    <img src="images/avatars/sunny.png" alt="me" class="online" /> 
-                    <span>john.doe </span>
-                </a>
-            </span>
-        </div>
+<body class="ng-cloak">
 
-        <nav>
-            <ul>
-                <li class="active">
-                    <a href="index.html" title="Dashboard"><i class="fa fa-lg fa-fw fa-home"></i> <span class="menu-item-parent">Dashboard</span></a>
-                </li>
-                <li>
-                    <a href="inbox.html"><i class="fa fa-lg fa-fw fa-inbox"></i> <span class="menu-item-parent">Inbox</span><span class="badge pull-right inbox-badge">14</span></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-bar-chart-o"></i> <span class="menu-item-parent">Graphs</span></a>
-                    <ul>
-                        <li>
-                            <a href="flot.html">Flot Chart</a>
-                        </li>
-                        <li>
-                            <a href="morris.html">Morris Charts</a>
-                        </li>
-                        <li>
-                            <a href="inline-charts.html">Inline Charts</a>
-                        </li>
-                        <li>
-                            <a href="dygraphs.html">Dygraphs</a>
-                        </li>
-                        <li>
-                            <a href="chartjs.html">Chart.js <span class="badge pull-right inbox-badge bg-color-yellow">new</span></a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-table"></i> <span class="menu-item-parent">Tables</span></a>
-                    <ul>
-                        <li>
-                            <a href="table.html">Normal Tables</a>
-                        </li>
-                        <li>
-                            <a href="datatables.html">Data Tables <span class="badge inbox-badge bg-color-greenLight">v1.10</span></a>
-                        </li>
-                        <li>
-                            <a href="jqgrid.html">Jquery Grid</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-pencil-square-o"></i> <span class="menu-item-parent">Forms</span></a>
-                    <ul>
-                        <li>
-                            <a href="form-elements.html">Smart Form Elements</a>
-                        </li>
-                        <li>
-                            <a href="form-templates.html">Smart Form Layouts</a>
-                        </li>
-                        <li>
-                            <a href="validation.html">Smart Form Validation</a>
-                        </li>
-                        <li>
-                            <a href="bootstrap-forms.html">Bootstrap Form Elements</a>
-                        </li>
-                        <li>
-                            <a href="bootstrap-validator.html">Bootstrap Form Validation</a>
-                        </li>
-                        <li>
-                            <a href="plugins.html">Form Plugins</a>
-                        </li>
-                        <li>
-                            <a href="wizard.html">Wizards</a>
-                        </li>
-                        <li>
-                            <a href="other-editors.html">Bootstrap Editors</a>
-                        </li>
-                        <li>
-                            <a href="dropzone.html">Dropzone </a>
-                        </li>
-                        <li>
-                            <a href="image-editor.html">Image Cropping <span class="badge pull-right inbox-badge bg-color-yellow">new</span></a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-desktop"></i> <span class="menu-item-parent">UI Elements</span></a>
-                    <ul>
-                        <li>
-                            <a href="general-elements.html">General Elements</a>
-                        </li>
-                        <li>
-                            <a href="buttons.html">Buttons</a>
-                        </li>
-                        <li>
-                            <a href="#">Icons</a>
-                            <ul>
-                                <li>
-                                    <a href="fa.html"><i class="fa fa-plane"></i> Font Awesome</a>
-                                </li>
-                                <li>
-                                    <a href="glyph.html"><i class="glyphicon glyphicon-plane"></i> Glyph Icons</a>
-                                </li>
-                                <li>
-                                    <a href="flags.html"><i class="fa fa-flag"></i> Flags</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="grid.html">Grid</a>
-                        </li>
-                        <li>
-                            <a href="treeview.html">Tree View</a>
-                        </li>
-                        <li>
-                            <a href="nestable-list.html">Nestable Lists</a>
-                        </li>
-                        <li>
-                            <a href="jqui.html">JQuery UI</a>
-                        </li>
-                        <li>
-                            <a href="typography.html">Typography</a>
-                        </li>
-                        <li>
-                            <a href="#">Six Level Menu</a>
-                            <ul>
-                                <li>
-                                    <a href="#"><i class="fa fa-fw fa-folder-open"></i> Item #2</a>
-                                    <ul>
-                                        <li>
-                                            <a href="#"><i class="fa fa-fw fa-folder-open"></i> Sub #2.1 </a>
-                                            <ul>
-                                                <li>
-                                                    <a href="#"><i class="fa fa-fw fa-file-text"></i> Item #2.1.1</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#"><i class="fa fa-fw fa-plus"></i> Expand</a>
-                                                    <ul>
-                                                        <li>
-                                                            <a href="#"><i class="fa fa-fw fa-file-text"></i> File</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#"><i class="fa fa-fw fa-trash-o"></i> Delete</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="#"><i class="fa fa-fw fa-folder-open"></i> Item #3</a>
-                                    <ul>
-                                        <li>
-                                            <a href="#"><i class="fa fa-fw fa-folder-open"></i> 3ed Level </a>
-                                            <ul>
-                                                <li>
-                                                    <a href="#"><i class="fa fa-fw fa-file-text"></i> File</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#"><i class="fa fa-fw fa-file-text"></i> File</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="calendar.html"><i class="fa fa-lg fa-fw fa-calendar"><em>3</em></i> <span class="menu-item-parent">Calendar</span></a>
-                </li>
-                <li>
-                    <a href="widgets.html"><i class="fa fa-lg fa-fw fa-list-alt"></i> <span class="menu-item-parent">Widgets</span></a>
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-lg fa-fw fa-puzzle-piece"></i> <span class="menu-item-parent">App Views</span></a>
-                    <ul>
-                        <li>
-                            <a href="projects.html"><i class="fa fa-file-text-o"></i> Projects</a>
-                        </li>
-                        <li>
-                            <a href="blog.html"><i class="fa fa-paragraph"></i> Blog</a>
-                        </li>
-                        <li>
-                            <a href="gallery.html"><i class="fa fa-picture-o"></i> Gallery</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-comments"></i> Forum Layout</a>
-                            <ul>
-                                <li><a href="forum.html">General View</a></li>
-                                <li><a href="forum-topic.html">Topic View</a></li>
-                                <li><a href="forum-post.html">Post View</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="profile.html"><i class="fa fa-group"></i> Profile</a>
-                        </li>
-                        <li>
-                            <a href="timeline.html"><i class="fa fa-clock-o"></i> Timeline</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-        <span class="minifyme" data-action="minifyMenu"> 
-            <i class="fa fa-arrow-circle-left hit"></i> 
-        </span>
-    </aside>
-
-
-    <!-- <div ng-include="'/sidebar'"></div> -->
+    <div ng-include="'/sidebar'"></div>
     
-    <!-- END NAVIGATION -->
-    <!-- MAIN PANEL -->
     <div id="main" role="main">
         <!-- RIBBON -->
         <div id="ribbon">
@@ -1147,10 +914,13 @@
     <!-- inject:js -->
     <script src="/src/client/app/app.index.module.js"></script>
     <script src="/src/client/app/blocks/restful/restful.module.js"></script>
+    <script src="/src/client/app/blocks/router/router.module.js"></script>
     <script src="/src/client/app/blocks/utils/utils.module.js"></script>
     <script src="/src/client/app/core/core.module.js"></script>
+    <script src="/src/client/app/smartadmin/smartadmin.module.js"></script>
     <script src="/src/client/app/blocks/restful/restful-helper.factory.js"></script>
     <script src="/src/client/app/blocks/restful/restful-query.factory.js"></script>
+    <script src="/src/client/app/blocks/router/router-helper.provider.js"></script>
     <script src="/src/client/app/blocks/utils/file-input.directive.js"></script>
     <script src="/src/client/app/blocks/utils/form-validator.factory.js"></script>
     <script src="/src/client/app/blocks/utils/local-storage.factory.js"></script>
@@ -1159,8 +929,9 @@
     <script src="/src/client/app/core/constants.js"></script>
     <script src="/src/client/app/smartadmin/app.config.js"></script>
     <script src="/src/client/app/smartadmin/app.js"></script>
-    <script src="/src/client/app/smartadmin/jarvis.widget.js"></script>
+    <script src="/src/client/app/smartadmin/demo.js"></script>
     <script src="/src/client/app/smartadmin/smart.notification.js"></script>
+    <script src="/src/client/app/smartadmin/smartadmin.controller.js"></script>
     <!-- endinject -->
     <!-- inject:templates:js -->
     <!-- endinject -->
