--- a/src/main/webapp-src/src/client/public/admin-sidebar.html
+++ b/src/main/webapp-src/src/client/public/admin-sidebar.html
@@ -20,7 +20,7 @@
 <!-- END HEADER -->
 <!-- Left panel : Navigation area -->
 <!-- Note: This width of the aside area can be adjusted through LESS variables -->
-<aside id="left-panel">
+<aside id="left-panel" ng-controller="SmartadminController as vm">
     <div class="login-info">
         <span> 
             <a href="javascript:void(0);" id="show-shortcut" data-action="toggleShortcut">
